feat(ui): added hourly forecast and somechanges in design